bk_ida/gccida/g0/make_tree
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4510:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4511:5: error: expected ';' after expression
tree v5; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4511:6: error: use of undeclared identifier 'v5'
tree v5; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4512:5: error: expected ';' after expression
tree v6; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4512:6: error: use of undeclared identifier 'v6'
tree v6; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4513:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4514:5: error: expected ';' after expression
tree v8; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4514:6: error: use of undeclared identifier 'v8'
tree v8; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4515:5: error: expected ';' after expression
tree v9; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4515:6: error: use of undeclared identifier 'v9'
tree v9; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4516:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4517:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4518:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4519:5: error: expected ';' after expression
tree v13; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4519:6: error: use of undeclared identifier 'v13'
tree v13; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4520:5: error: expected ';' after expression
tree v14; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4520:6: error: use of undeclared identifier 'v14'
tree v14; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4521:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/expmed.c:4522:5: error: expected ';' after expression
tree v16; // rbx 
    ^
    ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_tree/src/obj/expmed.o] Error 1
